--- a/landing.html
+++ b/landing.html
@@ -54,10 +54,20 @@
                    <button>View all</button> 
                     <h1>Featured Products</h1>
 
-                    <div> <img src="001.jpg" alt="01"></div>
-                    <div><img src="002.jpg" alt="02"></div>
-                    <div><img src="004.jpg" alt="04"></div>
-                    <div><img src="005.jpeg" alt="05"></div>
+                    <div> <img src="001.jpg" alt="01">
+                    <p>Abnormality Plain White</p>
+                    <p>$17.99</p></div>
+                    <div><img src="002.jpg" alt="02">
+                    <p>Denim Jacket</p> <p>$49.99</p></div>
+                    <div><img src="003.jpeg" alt="03">
+                    <p>Dark Red Bomber</p><p>$39.99</p></div>
+                    <div><img src="004.jpg" alt="04">
+                    <p>Ripped Blue</p><p>$39.99</p></div>
+                    <div><img src="005.jpeg" alt="05">
+                    <p>Spooky Fingers</p><p>34.99</p></div>
+                    <div><img src="006" alt="06">
+                    <p>Early-Christmas Party</p><p>$44.99</p></div>
+                    
                 </section>
 
                 <section>
